--- a/style.css
+++ b/style.css
@@ -1,4 +1,11 @@
 html{
     background-color: #000;
     color: #fff;
+    font-family: sans-serif;
+    text-align: center;
+}
+
+img{
+    max-width: 100%;
+    height: auto;
 }
